--- a/docs/development/changelog/release-3_4/3-4-10.md
+++ b/docs/development/changelog/release-3_4/3-4-10.md
@@ -42,21 +42,6 @@ sidebar_position: -3410
 [cloudpods - v3.4.10]: https://github.com/yunionio/cloudpods/compare/v3.4.9...v3.4.10
 -----
 
-## cloudpods-operator
-
-仓库地址: https://github.com/yunionio/cloudpods-operator
-
-2 commits to [cloudpods-operator - v3.4.10] since this release.
-
-### Features (1)
-- **host:** allow setting ovnEncapIpDetectionMethod ([176999a8](https://github.com/yunionio/cloudpods-operator/commit/176999a8fe1b3d5bed4876dd88881cb43569416b), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
-
-### Vendor (1)
-- update yunion.io/x/master to current release/3.4 ([05ccca28](https://github.com/yunionio/cloudpods-operator/commit/05ccca28884473cf218db755c8e89b2ce1213d9c), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
-
-[cloudpods-operator - v3.4.10]: https://github.com/yunionio/cloudpods-operator/compare/v3.4.9...v3.4.10
------
-
 ## ocadm
 
 仓库地址: https://github.com/yunionio/ocadm
@@ -77,6 +62,18 @@ sidebar_position: -3410
 仓库地址: https://github.com/yunionio/sdnagent
 
 3 commits to [sdnagent - v3.4.10] since this release.
+
+### Build (1)
+- eipgw: track to ensure stop state as well ([71e82fb9](https://github.com/yunionio/sdnagen/commit/71e82fb9d8c330c19f93caf4e4e7e2a2caf362af), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Others (1)
+- .circleci: bump go to 1.14 ([d5a7f199](https://github.com/yunionio/sdnagen/commit/d5a7f1993f50f18380d0c9c8ae9721d8f9edf061), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Vendor (1)
+- bump yunion.io/x/onecloud to current tip of release/3.3 ([cd98fe2f](https://github.com/yunionio/sdnagen/commit/cd98fe2f6da36c1484bf06bc5cd2ca394985fe22), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+[sdnagent - v3.4.10]: https://github.com/yunionio/sdnagent/compare/v3.4.9...v3.4.10
+release.
 
 ### Build (1)
 - eipgw: track to ensure stop state as well ([71e82fb9](https://github.com/yunionio/sdnagen/commit/71e82fb9d8c330c19f93caf4e4e7e2a2caf362af), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
