--- a/docs/development/changelog/release-3_4/3-4-11.md
+++ b/docs/development/changelog/release-3_4/3-4-11.md
@@ -65,6 +65,21 @@ sidebar_position: -3411
 [cloudpods - v3.4.11]: https://github.com/yunionio/cloudpods/compare/v3.4.10...v3.4.11
 -----
 
+## cloudpods-operator
+
+仓库地址: https://github.com/yunionio/cloudpods-operator
+
+2 commits to [cloudpods-operator - v3.4.11] since this release.
+
+### Features (1)
+- **host:** allow setting ovnEncapIpDetectionMethod ([176999a8](https://github.com/yunionio/cloudpods-operator/commit/176999a8fe1b3d5bed4876dd88881cb43569416b), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Vendor (1)
+- update yunion.io/x/master to current release/3.4 ([05ccca28](https://github.com/yunionio/cloudpods-operator/commit/05ccca28884473cf218db755c8e89b2ce1213d9c), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+[cloudpods-operator - v3.4.11]: https://github.com/yunionio/cloudpods-operator/compare/v3.4.9...v3.4.11
+-----
+
 ## sdnagent
 
 仓库地址: https://github.com/yunionio/sdnagent
