--- a/docs/development/changelog/release-3_8/3-8-1.md
+++ b/docs/development/changelog/release-3_8/3-8-1.md
@@ -1204,15 +1204,66 @@ sidebar_position: -381
 
 仓库地址: https://github.com/yunionio/cloudpods-operator
 
-4 commits to [cloudpods-operator - v3.8.1] since this release.
+47 commits to [cloudpods-operator - v3.8.1] since this release.
 
-### Bug Fixes (4)
+### Apigateway (2)
+- cors: rename spec field name to corsHosts ([cd564101](https://github.com/yunionio/cloudpods-operator/commit/cd564101e2957dcfe25c349f06649c1c99ecbe0d), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+- allow setting cors_hosts ([15fa2b1a](https://github.com/yunionio/cloudpods-operator/commit/15fa2b1a06e497c0c9eee29b5f60b10fb5670de1), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Bug Fixes (23)
+- update vendor ([0dcc5d2c](https://github.com/yunionio/cloudpods-operator/commit/0dcc5d2c0c50d61d1b8e046dcf67928b44b0836f), [Qiu Jian](mailto:qiujian@yunionyun.com))
+- update process.total name ([c182e81f](https://github.com/yunionio/cloudpods-operator/commit/c182e81f5d76cea00c49334cadc26213e71a08ff), [zhaoxiangchun](mailto:1422928955@qq.com))
+- cloudmon timeout fix ([f5e1f649](https://github.com/yunionio/cloudpods-operator/commit/f5e1f649ce8e4426d908f9d42fbae8a5004f1f9f), [zhaoxiangchun](mailto:1422928955@qq.com))
+- fail to init policy ([07c0408f](https://github.com/yunionio/cloudpods-operator/commit/07c0408f26274c1348a1f3552cbdf27aa6a746d9), [Qiu Jian](mailto:qiujian@yunionyun.com))
+- raid plugin: raid status fix ([ad345043](https://github.com/yunionio/cloudpods-operator/commit/ad345043fecc047bb0b99aebbd6e085c8fa25d1d), [zhaoxiangchun](mailto:1422928955@qq.com))
+- update vendor ([aa530864](https://github.com/yunionio/cloudpods-operator/commit/aa530864c576c8482d86328cbe24651d38cba8bb), [Qiu Jian](mailto:qiujian@yunionyun.com))
+- access_url of common service config ([d3ffcfdd](https://github.com/yunionio/cloudpods-operator/commit/d3ffcfdd04486a7b4a9a76c74fe480af7c8c11cb), [Zexi Li](mailto:zexi.li@qq.com))
+- default policy name should be separated by dash ([3f6cfc3b](https://github.com/yunionio/cloudpods-operator/commit/3f6cfc3b1af2572e744866ffc9c9a6cf7b9d25ae), [Qiu Jian](mailto:qiujian@yunionyun.com))
+- update system commonalert param ([069f1da9](https://github.com/yunionio/cloudpods-operator/commit/069f1da981280745898488a6e6c020bcd0fe3ee1), [zhaoxiangchun](mailto:1422928955@qq.com))
+- update  raid-plugin image tag ([557553bd](https://github.com/yunionio/cloudpods-operator/commit/557553bd5a7cb4b231a36f9774f9001758d45689), [zhaoxiangchun](mailto:1422928955@qq.com))
 - add apsara mon ([d652ec2d](https://github.com/yunionio/cloudpods-operator/commit/d652ec2d8c341b8b2ae83c603cb95ef08afcfcc6), [Qu Xuan](mailto:quxuan@yunionyun.com))
+- make system roles private ([9376cb61](https://github.com/yunionio/cloudpods-operator/commit/9376cb6176290f88a886819e71e49143c0d32431), [Qiu Jian](mailto:qiujian@yunionyun.com))
+- **build:** update vendor ([f18a9247](https://github.com/yunionio/cloudpods-operator/commit/f18a924742fdf50417d89ba6558dae6598fb2255), [Zexi Li](mailto:zexi.li@icloud.com))
+- **cloudmon:** crond commond fmt err ([98a21dc6](https://github.com/yunionio/cloudpods-operator/commit/98a21dc67ea5838a27e1c5d2367fc51e7e6bd943), [zhaoxiangchun](mailto:1422928955@qq.com))
 - **cloudmon:** report usage set timeout param ([e6ec7623](https://github.com/yunionio/cloudpods-operator/commit/e6ec7623b25c5b1ed50505c4b4ddf2d0b8c1323f), [zhaoxiangchun](mailto:1422928955@qq.com))
 - **cloudmon:** fix cloudmon HCSO provider ([433b478e](https://github.com/yunionio/cloudpods-operator/commit/433b478e74d6636a1e7a9e6db5e17c7ddabe6eb2), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **glance:** s3 endpoint should use domain resolve ([0f5438f5](https://github.com/yunionio/cloudpods-operator/commit/0f5438f56f0a328a0b987a68a0efd0e6fde60053), [Zexi Li](mailto:zexi.li@qq.com))
+- **glance:** comment s3 switch logical ([be1c5c99](https://github.com/yunionio/cloudpods-operator/commit/be1c5c99a2d53001c418a90ba47d134734bf939d), [Zexi Li](mailto:zexi.li@qq.com))
+- **minio:** disable minio component when status is fail ([6b951487](https://github.com/yunionio/cloudpods-operator/commit/6b951487e8c212ff0860d0a5f606132a868956ed), [Zexi Li](mailto:zexi.li@qq.com))
+- **monitor:** raid卡监控规则status过滤参数调整 ([ffe5273c](https://github.com/yunionio/cloudpods-operator/commit/ffe5273cd04c5b7f422c25e67e480c0d2322bdbd), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **operator:** modify crontab default interval ([977e222e](https://github.com/yunionio/cloudpods-operator/commit/977e222e9cbace9e9e93cf3b6012c0057aef753c), [zhaoxiangchun](mailto:1422928955@qq.com))
 - **region:** baremetal prepare ip ([91af5fbb](https://github.com/yunionio/cloudpods-operator/commit/91af5fbb84840d9f19c9a74cc6d261a1ebdc9fc5), [Zexi Li](mailto:zexi.li@icloud.com))
+- **region:** let region server system init resources only once ([233c6fb8](https://github.com/yunionio/cloudpods-operator/commit/233c6fb8f3f07c3aaf1d980c9be27b484e099d81), [Zexi Li](mailto:zexi.li@icloud.com))
 
-[cloudpods-operator - v3.8.1]: https://github.com/yunionio/cloudpods-operator/compare/v3.8.0...v3.8.1
+### Features (15)
+- deploy minio ([cb8e7275](https://github.com/yunionio/cloudpods-operator/commit/cb8e7275ab426980cf94978db0c956faa6223366), [Zexi Li](mailto:zexi.li@qq.com))
+- add process common alert policy ([218503c9](https://github.com/yunionio/cloudpods-operator/commit/218503c92e625264f7a446ac6179f5e8e054f785), [zhaoxiangchun](mailto:1422928955@qq.com))
+- init devtool script and ansible reference for devtool ([ff793ee9](https://github.com/yunionio/cloudpods-operator/commit/ff793ee9ee09ed0e79642b00e06641e221174f8d), [rainzm](mailto:mjoycarry@gmail.com))
+- support jdcloud monitor metric ([18fdf834](https://github.com/yunionio/cloudpods-operator/commit/18fdf8342b00ad2c00510a0531f0a562e4983a5e), [zhaoxiangchun](mailto:1422928955@qq.com))
+- support HuaweiCloudStack rds metric ([009e560d](https://github.com/yunionio/cloudpods-operator/commit/009e560d97a15b5df26b325b1a5927681d7add66), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **build:** support multi arch docker image ([0343a329](https://github.com/yunionio/cloudpods-operator/commit/0343a329bae48b6b93be4dfbab58bfd3530055f1), [Zexi Li](mailto:zexi.li@qq.com))
+- **cloudmon:** support HuaweiCloudStack metric ([cf4989a3](https://github.com/yunionio/cloudpods-operator/commit/cf4989a342cca31b93b34f322d46fa6ace4078eb), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **cloudmon:** add storage monitor metric config and modify cloudmon config infection func ([27f1f15b](https://github.com/yunionio/cloudpods-operator/commit/27f1f15bc5d606b8eaad692acf93c39d39397ccd), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **cloudmon:** update cloudmon component image info ([7a390f57](https://github.com/yunionio/cloudpods-operator/commit/7a390f578e5534918b9b8b447113b1cc77cde7fb), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **cloudmon:** add cloudmon alertrecord crontab ([16d16e59](https://github.com/yunionio/cloudpods-operator/commit/16d16e595e977a477898a35afb7e177fb645e311), [zhaoxiangchun](mailto:1422928955@qq.com))
+- **crd:** support inject imagePullSecrets ([9ee00e53](https://github.com/yunionio/cloudpods-operator/commit/9ee00e5357ab4507f5799444d9199c90a634b303), [Zexi Li](mailto:zexi.li@icloud.com))
+- **glance:** add minio support ([e37d8b6a](https://github.com/yunionio/cloudpods-operator/commit/e37d8b6aec757ff524c800ac4033c261af9045c5), [wanyaoqi](mailto:wanyaoqi@yunionyun.com))
+- **k8s:** enable kubeserver ([90ccd614](https://github.com/yunionio/cloudpods-operator/commit/90ccd61465a17ea1320c57f0e8e218a6bac3fc67), [Zexi Li](mailto:zexi.li@qq.com))
+- **monitor-stack:** add monitor stack component ([dee274f1](https://github.com/yunionio/cloudpods-operator/commit/dee274f13acc85570c607af0a0f5d33df8d7e983), [Zexi Li](mailto:zexi.li@icloud.com))
+- **operator:** set default resources limits for each component ([38914e4c](https://github.com/yunionio/cloudpods-operator/commit/38914e4c52c579fbc0b4fb2254e16286e5dd255a), [Zexi Li](mailto:zexi.li@icloud.com))
+
+### Others (6)
+- update vendor ([f0b98aaf](https://github.com/yunionio/cloudpods-operator/commit/f0b98aafffa63fdcce04edf84c55ee717c7b58cf), [Qiu Jian](mailto:qiujian@yunionyun.com))
+- feat：add jdcloud rds metric ([a113f843](https://github.com/yunionio/cloudpods-operator/commit/a113f84324feda7b2a7803a6167b28bb29a7dc48), [zhaoxiangchun](mailto:1422928955@qq.com))
+- update manifest version to v3.7.5 ([87770c07](https://github.com/yunionio/cloudpods-operator/commit/87770c0785a1da2c7daa8d0d0e6adcc06f5f7581), [Zexi Li](mailto:zexi.li@qq.com))
+- update vendor ([ba527add](https://github.com/yunionio/cloudpods-operator/commit/ba527addff0fc20795cefac3fd0b6f4d91a14625), [rainzm](mailto:mjoycarry@gmail.com))
+- Add cloudproxy ([9c6aceeb](https://github.com/yunionio/cloudpods-operator/commit/9c6aceeb5580f8dc3df20bb55bedf147b3a6e07a), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+- update vendor ([5af2ebd5](https://github.com/yunionio/cloudpods-operator/commit/5af2ebd5a11b0f376630664a40951d7a144deb55), [Qiu Jian](mailto:qiujian@yunionyun.com))
+
+### Vendor (1)
+- bump to current tip of release/3.7 ([e85056c5](https://github.com/yunionio/cloudpods-operator/commit/e85056c571e192712ce03b227195441978a9039d), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+[cloudpods-operator - v3.8.1]: https://github.com/yunionio/cloudpods-operator/compare/v3.7.10...v3.8.1
 -----
 
 ## dashboard
@@ -1384,6 +1435,3 @@ sidebar_position: -381
 - use 99 years certs ([0609b184](https://github.com/yunionio/ocadm/commit/0609b18486dcf068cdd51b8290ee7f6c96302080), [Zexi Li](mailto:zexi.li@icloud.com))
 
 [ocadm - v3.8.1]: https://github.com/yunionio/ocadm/compare/v3.8.0...v3.8.1
-0...v3.8.1
-0...v3.8.1
-0...v3.8.1
