--- a/i18n/en/docusaurus-plugin-content-docs/current/development/changelog/release-3_8/3-8-0.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/development/changelog/release-3_8/3-8-0.md
@@ -8,68 +8,6 @@ Released at 2021-08-27 13:13:35
 
 -----
 
-## cloudpods-operator
-
-Repo: https://github.com/yunionio/cloudpods-operator
-
-43 commits to [cloudpods-operator - v3.8.0] since this release.
-
-### Apigateway (2)
-- cors: rename spec field name to corsHosts ([cd564101](https://github.com/yunionio/cloudpods-operator/commit/cd564101e2957dcfe25c349f06649c1c99ecbe0d), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
-- allow setting cors_hosts ([15fa2b1a](https://github.com/yunionio/cloudpods-operator/commit/15fa2b1a06e497c0c9eee29b5f60b10fb5670de1), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
-
-### Bug Fixes (19)
-- default policy name should be separated by dash ([3f6cfc3b](https://github.com/yunionio/cloudpods-operator/commit/3f6cfc3b1af2572e744866ffc9c9a6cf7b9d25ae), [Qiu Jian](mailto:qiujian@yunionyun.com))
-- access_url of common service config ([d3ffcfdd](https://github.com/yunionio/cloudpods-operator/commit/d3ffcfdd04486a7b4a9a76c74fe480af7c8c11cb), [Zexi Li](mailto:zexi.li@qq.com))
-- update process.total name ([c182e81f](https://github.com/yunionio/cloudpods-operator/commit/c182e81f5d76cea00c49334cadc26213e71a08ff), [zhaoxiangchun](mailto:1422928955@qq.com))
-- update system commonalert param ([069f1da9](https://github.com/yunionio/cloudpods-operator/commit/069f1da981280745898488a6e6c020bcd0fe3ee1), [zhaoxiangchun](mailto:1422928955@qq.com))
-- update  raid-plugin image tag ([557553bd](https://github.com/yunionio/cloudpods-operator/commit/557553bd5a7cb4b231a36f9774f9001758d45689), [zhaoxiangchun](mailto:1422928955@qq.com))
-- cloudmon timeout fix ([f5e1f649](https://github.com/yunionio/cloudpods-operator/commit/f5e1f649ce8e4426d908f9d42fbae8a5004f1f9f), [zhaoxiangchun](mailto:1422928955@qq.com))
-- raid plugin: raid status fix ([ad345043](https://github.com/yunionio/cloudpods-operator/commit/ad345043fecc047bb0b99aebbd6e085c8fa25d1d), [zhaoxiangchun](mailto:1422928955@qq.com))
-- make system roles private ([9376cb61](https://github.com/yunionio/cloudpods-operator/commit/9376cb6176290f88a886819e71e49143c0d32431), [Qiu Jian](mailto:qiujian@yunionyun.com))
-- update vendor ([0dcc5d2c](https://github.com/yunionio/cloudpods-operator/commit/0dcc5d2c0c50d61d1b8e046dcf67928b44b0836f), [Qiu Jian](mailto:qiujian@yunionyun.com))
-- update vendor ([aa530864](https://github.com/yunionio/cloudpods-operator/commit/aa530864c576c8482d86328cbe24651d38cba8bb), [Qiu Jian](mailto:qiujian@yunionyun.com))
-- fail to init policy ([07c0408f](https://github.com/yunionio/cloudpods-operator/commit/07c0408f26274c1348a1f3552cbdf27aa6a746d9), [Qiu Jian](mailto:qiujian@yunionyun.com))
-- **build:** update vendor ([f18a9247](https://github.com/yunionio/cloudpods-operator/commit/f18a924742fdf50417d89ba6558dae6598fb2255), [Zexi Li](mailto:zexi.li@icloud.com))
-- **cloudmon:** crond commond fmt err ([98a21dc6](https://github.com/yunionio/cloudpods-operator/commit/98a21dc67ea5838a27e1c5d2367fc51e7e6bd943), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **glance:** comment s3 switch logical ([be1c5c99](https://github.com/yunionio/cloudpods-operator/commit/be1c5c99a2d53001c418a90ba47d134734bf939d), [Zexi Li](mailto:zexi.li@qq.com))
-- **glance:** s3 endpoint should use domain resolve ([0f5438f5](https://github.com/yunionio/cloudpods-operator/commit/0f5438f56f0a328a0b987a68a0efd0e6fde60053), [Zexi Li](mailto:zexi.li@qq.com))
-- **minio:** disable minio component when status is fail ([6b951487](https://github.com/yunionio/cloudpods-operator/commit/6b951487e8c212ff0860d0a5f606132a868956ed), [Zexi Li](mailto:zexi.li@qq.com))
-- **monitor:** raid卡监控规则status过滤参数调整 ([ffe5273c](https://github.com/yunionio/cloudpods-operator/commit/ffe5273cd04c5b7f422c25e67e480c0d2322bdbd), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **operator:** modify crontab default interval ([977e222e](https://github.com/yunionio/cloudpods-operator/commit/977e222e9cbace9e9e93cf3b6012c0057aef753c), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **region:** let region server system init resources only once ([233c6fb8](https://github.com/yunionio/cloudpods-operator/commit/233c6fb8f3f07c3aaf1d980c9be27b484e099d81), [Zexi Li](mailto:zexi.li@icloud.com))
-
-### Features (15)
-- deploy minio ([cb8e7275](https://github.com/yunionio/cloudpods-operator/commit/cb8e7275ab426980cf94978db0c956faa6223366), [Zexi Li](mailto:zexi.li@qq.com))
-- add process common alert policy ([218503c9](https://github.com/yunionio/cloudpods-operator/commit/218503c92e625264f7a446ac6179f5e8e054f785), [zhaoxiangchun](mailto:1422928955@qq.com))
-- init devtool script and ansible reference for devtool ([ff793ee9](https://github.com/yunionio/cloudpods-operator/commit/ff793ee9ee09ed0e79642b00e06641e221174f8d), [rainzm](mailto:mjoycarry@gmail.com))
-- support jdcloud monitor metric ([18fdf834](https://github.com/yunionio/cloudpods-operator/commit/18fdf8342b00ad2c00510a0531f0a562e4983a5e), [zhaoxiangchun](mailto:1422928955@qq.com))
-- support HuaweiCloudStack rds metric ([009e560d](https://github.com/yunionio/cloudpods-operator/commit/009e560d97a15b5df26b325b1a5927681d7add66), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **build:** support multi arch docker image ([0343a329](https://github.com/yunionio/cloudpods-operator/commit/0343a329bae48b6b93be4dfbab58bfd3530055f1), [Zexi Li](mailto:zexi.li@qq.com))
-- **cloudmon:** support HuaweiCloudStack metric ([cf4989a3](https://github.com/yunionio/cloudpods-operator/commit/cf4989a342cca31b93b34f322d46fa6ace4078eb), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **cloudmon:** add storage monitor metric config and modify cloudmon config infection func ([27f1f15b](https://github.com/yunionio/cloudpods-operator/commit/27f1f15bc5d606b8eaad692acf93c39d39397ccd), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **cloudmon:** update cloudmon component image info ([7a390f57](https://github.com/yunionio/cloudpods-operator/commit/7a390f578e5534918b9b8b447113b1cc77cde7fb), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **cloudmon:** add cloudmon alertrecord crontab ([16d16e59](https://github.com/yunionio/cloudpods-operator/commit/16d16e595e977a477898a35afb7e177fb645e311), [zhaoxiangchun](mailto:1422928955@qq.com))
-- **crd:** support inject imagePullSecrets ([9ee00e53](https://github.com/yunionio/cloudpods-operator/commit/9ee00e5357ab4507f5799444d9199c90a634b303), [Zexi Li](mailto:zexi.li@icloud.com))
-- **glance:** add minio support ([e37d8b6a](https://github.com/yunionio/cloudpods-operator/commit/e37d8b6aec757ff524c800ac4033c261af9045c5), [wanyaoqi](mailto:wanyaoqi@yunionyun.com))
-- **k8s:** enable kubeserver ([90ccd614](https://github.com/yunionio/cloudpods-operator/commit/90ccd61465a17ea1320c57f0e8e218a6bac3fc67), [Zexi Li](mailto:zexi.li@qq.com))
-- **monitor-stack:** add monitor stack component ([dee274f1](https://github.com/yunionio/cloudpods-operator/commit/dee274f13acc85570c607af0a0f5d33df8d7e983), [Zexi Li](mailto:zexi.li@icloud.com))
-- **operator:** set default resources limits for each component ([38914e4c](https://github.com/yunionio/cloudpods-operator/commit/38914e4c52c579fbc0b4fb2254e16286e5dd255a), [Zexi Li](mailto:zexi.li@icloud.com))
-
-### Others (6)
-- update vendor ([f0b98aaf](https://github.com/yunionio/cloudpods-operator/commit/f0b98aafffa63fdcce04edf84c55ee717c7b58cf), [Qiu Jian](mailto:qiujian@yunionyun.com))
-- feat：add jdcloud rds metric ([a113f843](https://github.com/yunionio/cloudpods-operator/commit/a113f84324feda7b2a7803a6167b28bb29a7dc48), [zhaoxiangchun](mailto:1422928955@qq.com))
-- update manifest version to v3.7.5 ([87770c07](https://github.com/yunionio/cloudpods-operator/commit/87770c0785a1da2c7daa8d0d0e6adcc06f5f7581), [Zexi Li](mailto:zexi.li@qq.com))
-- update vendor ([ba527add](https://github.com/yunionio/cloudpods-operator/commit/ba527addff0fc20795cefac3fd0b6f4d91a14625), [rainzm](mailto:mjoycarry@gmail.com))
-- Add cloudproxy ([9c6aceeb](https://github.com/yunionio/cloudpods-operator/commit/9c6aceeb5580f8dc3df20bb55bedf147b3a6e07a), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
-- update vendor ([5af2ebd5](https://github.com/yunionio/cloudpods-operator/commit/5af2ebd5a11b0f376630664a40951d7a144deb55), [Qiu Jian](mailto:qiujian@yunionyun.com))
-
-### Vendor (1)
-- bump to current tip of release/3.7 ([e85056c5](https://github.com/yunionio/cloudpods-operator/commit/e85056c571e192712ce03b227195441978a9039d), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
-
-[cloudpods-operator - v3.8.0]: https://github.com/yunionio/cloudpods-operator/compare/v3.7.10...v3.8.0
------
-
 ## cloudpods-service-operator
 
 Repo: https://github.com/yunionio/cloudpods-service-operator
@@ -650,6 +588,104 @@ Repo: https://github.com/yunionio/kubecomps
 - **kubeserver:** resources limits for component ([6d942715](https://github.com/yunionio/kubecomps/commit/6d942715e5ad251142ba7a4e27456730a65dd5cf), [Zexi Li](mailto:zexi.li@icloud.com))
 - **kubeserver:** update system cluster components setting ([10839d53](https://github.com/yunionio/kubecomps/commit/10839d535e1c09eeec37fe0614eb307d26dcf06d), [Zexi Li](mailto:zexi.li@icloud.com))
 - **kubeserver:** add monitor minio component ([ad81bbf3](https://github.com/yunionio/kubecomps/commit/ad81bbf35c7efc99cc9186870b73766d5a8a07e4), [Zexi Li](mailto:zexi.li@icloud.com))
+- **kubeserver:** change configuration of minio ([3e7aeff8](https://github.com/yunionio/kubecomps/commit/3e7aeff8b86cfa9f62a7d8aae0488cb88da9ad8a), [Zexi Li](mailto:zexi.li@qq.com))
+- **kubeserver:** sync telegraf dashboard to system grafana ([529615e9](https://github.com/yunionio/kubecomps/commit/529615e967a6232c28914557fd0a3a762d7edf4a), [Zexi Li](mailto:zexi.li@icloud.com))
+- **kubeserver:** add cluster precheck api ([98c8d8a0](https://github.com/yunionio/kubecomps/commit/98c8d8a09051a0e22481e67a468d277ce3ec8b4f), [Zexi Li](mailto:zexi.li@qq.com))
+- **kubeserver:** chart ignores options ([f4887344](https://github.com/yunionio/kubecomps/commit/f4887344dc4ea1c2103449ada1119f16f693ba0a), [Zexi Li](mailto:zexi.li@icloud.com))
+- **readme:** add build steps ([39bdda4f](https://github.com/yunionio/kubecomps/commit/39bdda4fc21c6381bd568fb727b940d466b32483), [Zexi Li](mailto:zexi.li@icloud.com))
+- **readme:** add readme ([b245c651](https://github.com/yunionio/kubecomps/commit/b245c6510eae3b4ad4eff9c5c0bf0cf825dad431), [Zexi Li](mailto:zexi.li@qq.com))
+- **repo:** repo url allow updated ([51bbedd1](https://github.com/yunionio/kubecomps/commit/51bbedd1b81dd9e4fb91662d3980e99c6e3b3fd8), [Zexi Li](mailto:zexi.li@qq.com))
+
+[kubecomps - v3.8.0]: https://github.com/yunionio/kubecomps/compare/v3.7.10...v3.8.0
+-----
+
+## notify-plugins
+
+Repo: https://github.com/yunionio/notify-plugins
+
+5 commits to [notify-plugins - v3.8.0] since this release.
+
+### Bug Fixes (3)
+- **build:** build arm64 image ([4a11361](https://github.com/yunionio/notify-plugins/commit/4a113612002bc14db9ba25f64843f2f5ba495d70), [Zexi Li](mailto:zexi.li@qq.com))
+- **workwx:** no user exist ([41dc5d9](https://github.com/yunionio/notify-plugins/commit/41dc5d9ac8eaae046c7c54ebb7c184f699bec43f), [rainzm](mailto:mjoycarry@gmail.com))
+- **worwx:** return correctly when fetch contact ([08c831e](https://github.com/yunionio/notify-plugins/commit/08c831e2eebcc8ab003927a4aaa3d743be5976ff), [rainzm](mailto:mjoycarry@gmail.com))
+
+### Features (2)
+- adds domain attributes for notify config ([77e72b7](https://github.com/yunionio/notify-plugins/commit/77e72b7f34994e3c466800c30060d388cbb3d013), [rainzm](mailto:mjoycarry@gmail.com))
+- be compatible with notify's change to support international mobile ([caaa6ed](https://github.com/yunionio/notify-plugins/commit/caaa6ed48990590d177d2560bb457daf0a992f22), [rainzm](mailto:mjoycarry@gmail.com))
+
+[notify-plugins - v3.8.0]: https://github.com/yunionio/notify-plugins/compare/v3.7.10...v3.8.0
+-----
+
+## ocadm
+
+Repo: https://github.com/yunionio/ocadm
+
+13 commits to [ocadm - v3.8.0] since this release.
+
+### Bug Fixes (7)
+- set operator imagePullPolicy IfNotPresent ([96432152](https://github.com/yunionio/ocadm/commit/964321525724cbca4dc1e01f80579a56c8c1754c), [Zexi Li](mailto:zexi.li@qq.com))
+- **cluster:** set OS_PROJECT_DOMAIN of cluster auth info ([1096cccd](https://github.com/yunionio/ocadm/commit/1096cccdb39473b62a8c9210a373e530453da516), [Zexi Li](mailto:zexi.li@qq.com))
+- **cluster:** update vendor make build pass ([76a69b52](https://github.com/yunionio/ocadm/commit/76a69b5276bd225f2b386ac917bdb6bbcb89e05a), [Zexi Li](mailto:zexi.li@qq.com))
+- **git:** 切分支例行更新 version tag ([b7a01634](https://github.com/yunionio/ocadm/commit/b7a0163485d23491e35ba43c6eee9e7176fa22a6), [Zhang Dongliang](mailto:zhangdongliang@yunion.cn))
+- **k8s,keepalived:** 解决 k8s 高可用集群在部署时无法获取 nodeip 的问题 ([1536c295](https://github.com/yunionio/ocadm/commit/1536c2951dac1dd4c8bdcc41f4682d30359d71a4), [Zhang Dongliang](mailto:zhangdongliang@yunion.cn))
+- **keepalived:** 解决 高可用架构部署的默认网卡传递参数问题 ([676a3640](https://github.com/yunionio/ocadm/commit/676a36407634c6632f8934128564459e79e85e8e), [Zhang Dongliang](mailto:zhangdongliang@yunion.cn))
+- **preflight:** more accurate of mysql grant error ([df3afb6c](https://github.com/yunionio/ocadm/commit/df3afb6c01fb0895c875bbd1852a53669a4ff3c6), [Zexi Li](mailto:zexi.li@qq.com))
+
+### Features (4)
+- **build:** 增加arm 下编译 ocadm deb 的步骤(make deb)； 统一跨平台metrics-server 的 tag 名称；升级 k8s-sidecar 到 0.1.275 ([d672ebef](https://github.com/yunionio/ocadm/commit/d672ebefa0e5ac931800d9a61c753737cfd65ee8), [Zhang Dongliang](mailto:zhangdongliang@yunion.cn))
+- **calico,k8s,ovn:** 部置calico-node时调整默认配置提升ovn隧道流量的性能 ([c4a14ec8](https://github.com/yunionio/ocadm/commit/c4a14ec815e4d5b376fb883a0b9c86c3b7672068), [Zhang Dongliang](mailto:zhangdongliang@yunion.cn))
+- **keepalived,ha:** 新增 keepalived_interface 变量支持,以便在安装高可用多网卡情况下支持非默认网卡绑定 vip ([866ef392](https://github.com/yunionio/ocadm/commit/866ef392d4e8f7b74bbc9e4401fc43fd5c5978eb), [Zhang Dongliang](mailto:zhangdongliang@yunion.cn))
+- **longhorn:** support migrate to source pvc from longhorn pvc ([2df20ecb](https://github.com/yunionio/ocadm/commit/2df20ecb59466ba631e10197cafddc1d6926195a), [wanyaoqi](mailto:wanyaoqi@yunionyun.com))
+
+### Misc (1)
+- **vendor:** update vendor to master branch ([051f70fb](https://github.com/yunionio/ocadm/commit/051f70fba96c70482c56ae4b6dd75bb2d5a34ead), [Zexi Li](mailto:zexi.li@icloud.com))
+
+### Others (1)
+- update mod ([0cc9f1e1](https://github.com/yunionio/ocadm/commit/0cc9f1e165d3bd971c964aa52b7ec36abf00499c), [TangBin](mailto:tangbin@yunion.cn))
+
+[ocadm - v3.8.0]: https://github.com/yunionio/ocadm/compare/v3.7.10...v3.8.0
+-----
+
+## sdnagent
+
+Repo: https://github.com/yunionio/sdnagent
+
+13 commits to [sdnagent - v3.8.0] since this release.
+
+### Agent (1)
+- ovn: ensure iptables fastpath for geneve traffics ([352547cc](https://github.com/yunionio/sdnagen/commit/352547cca4aaee25d830ded96c0057a7021f8269), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Bug Fixes (2)
+- **tc:** aware of ingress qdisc ([06a02442](https://github.com/yunionio/sdnagen/commit/06a0244291f56c344b7113bcfab1a94fc308ede1), [Zexi Li](mailto:zexi.li@icloud.com))
+- **tcman:** delete all qdiscs before batch replace ([9f4715c9](https://github.com/yunionio/sdnagen/commit/9f4715c9ec86c7ba0bd6ce4287f82d0b6746ad3e), [Zexi Li](mailto:zexi.li@qq.com))
+
+### Build (2)
+- note on deploying ovs, ovn components ([246ce3ea](https://github.com/yunionio/sdnagen/commit/246ce3eac7871ff6d1ebb726acb222732dd5bf3a), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+- reword README.md for deploying eipgw ([a71f02ef](https://github.com/yunionio/sdnagen/commit/a71f02ef47b8f4ee34e411c08fc4d8bafd234f6f), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Features (1)
+- **build:** make multi arch manifest docker image ([591a93d4](https://github.com/yunionio/sdnagen/commit/591a93d4d87cdfab6e9950df9f83ad190d35b48e), [Zexi Li](mailto:zexi.li@qq.com))
+
+### Flowsource (1)
+- allow conntrack invalid packets ([f2e212ea](https://github.com/yunionio/sdnagen/commit/f2e212eabff86dd0707fa933522eed87a28741a4), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Others (3)
+- ovn-md: ovnMdServer: local origNs ([a3b8eae7](https://github.com/yunionio/sdnagen/commit/a3b8eae7e37ea1c7bc350ffe5d5bdda20de614a3), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+- ovn-md: ovnMdServer: fix logging typo on Stop ([bf4efbc8](https://github.com/yunionio/sdnagen/commit/bf4efbc833ea2aac689e116dcc45535b8cf7c6fb), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+- .circleci: go test with "-mod vendor" ([f59f4169](https://github.com/yunionio/sdnagen/commit/f59f41691f9756138e2a5bcc47b6ca9fffbbf0eb), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Ovn (1)
+- mapped: fix possible traffic loop across different vpcs ([b8c2af6f](https://github.com/yunionio/sdnagen/commit/b8c2af6f96c37ad08b343065e8d9ab8f1cdf5cdb), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Utils (1)
+- guest: ignore "secgroup" or "secgroups" ([394ccc0d](https://github.com/yunionio/sdnagen/commit/394ccc0db08ed3cdfd173af455a4707fe99efd30), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+### Vendor (1)
+- bump to current tip of release/3.7 ([bf49b2d0](https://github.com/yunionio/sdnagen/commit/bf49b2d0835b7f7dee7fed4c989239b49fe686cd), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
+
+[sdnagent - v3.8.0]: https://github.com/yunionio/sdnagent/compare/v3.7.10...v3.8.0
+tps://github.com/yunionio/kubecomps/commit/ad81bbf35c7efc99cc9186870b73766d5a8a07e4), [Zexi Li](mailto:zexi.li@icloud.com))
 - **kubeserver:** change configuration of minio ([3e7aeff8](https://github.com/yunionio/kubecomps/commit/3e7aeff8b86cfa9f62a7d8aae0488cb88da9ad8a), [Zexi Li](mailto:zexi.li@qq.com))
 - **kubeserver:** sync telegraf dashboard to system grafana ([529615e9](https://github.com/yunionio/kubecomps/commit/529615e967a6232c28914557fd0a3a762d7edf4a), [Zexi Li](mailto:zexi.li@icloud.com))
 - **kubeserver:** add cluster precheck api ([98c8d8a0](https://github.com/yunionio/kubecomps/commit/98c8d8a09051a0e22481e67a468d277ce3ec8b4f), [Zexi Li](mailto:zexi.li@qq.com))
