feat: v3.10.12 release note

--- a/docs/release-notes/v3_10_x.md
+++ b/docs/release-notes/v3_10_x.md
@@ -4,6 +4,41 @@ sidebar_position: -310
 
 # v3.10.x
 
+## v3.10.12 (含v3.10.11)
+
+date: 2024-1-29
+
+### 功能优化
+
+- 【多云】优化HCS及HCSOP账号录入模式（企业版）
+- 【主机】优化物理机注册输入方式，MAC地址修改为非必填
+- 【调度】减少从数据库构建宿主机缓存记录的时间
+- 【部署】升级过程默认不再重新初始化 grub 里面 gpu 相关启动参数
+- 【主机】优化虚机部署时 Resizefs 功能，支持系统分最后一个分区扩容
+- 【主机】支持 shared lvm storage
+- 【部署】ocboot 校验 ansbile 最低版本为 2.11.12
+
+### 问题修复
+
+- 【主机】修复创建虚拟机指定订阅无效问题
+- 【主机】修复新建vmware主机标签未同步问题
+- 【主机】修复部署windows 2016以上虚拟机部署失败的问题
+- 【主机】修复部署虚机是包含特殊字符部署失败的问题
+- 【主机】修复部署低版本操作系统（如centos 6) 部署失败的问题
+- 【主机】修复 host 启动时跳过 SR-IOV vf 网卡注册未生效问题
+- 【网络】修复华为云主机IP重复同步问题
+- 【物理机】修复 H3C 物理机纳管卡在 ipmi channel 8 的问题
+- 【监控】升级 telegraf-raid-plugin ，修复 MegaRaid 监控采集会导致系统不稳定的问题
+- 【部署】修复 operator 在私有云场景下没有部署 cloudproxy 组件的问题
+- 【容器】修复无法部署 k8s v1.22.9 版本的问题
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.10.12](../development/changelog/release-3_10/3-10-12)
+- [CHANGELOG v3.10.11](../development/changelog/release-3_10/3-10-11)
+
 ## v3.10.10 (含v3.10.9)
 
 date: 2023-12-26
