--- a/docs/development/changelog/release-3_7/3-7-0.md
+++ b/docs/development/changelog/release-3_7/3-7-0.md
@@ -2153,3 +2153,4 @@ t/compare/v3.6.22...v3.7.0
 t/compare/v3.6.22...v3.7.0
 t/compare/v3.6.22...v3.7.0
 t/compare/v3.6.22...v3.7.0
+t/compare/v3.6.22...v3.7.0
